--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="Flutter eBook App"
         android:icon="@mipmap/ic_launcher"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
@@ -30,7 +31,7 @@
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
-        <meta-data android:name="io.flutter.network-policy"
-            android:resource="@xml/network_security_config"/>
+        <!--        <meta-data android:name="io.flutter.network-policy"-->
+        <!--            android:resource="@xml/network_security_config"/>-->
     </application>
 </manifest>
