--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   permission_handler: ^4.2.0+hotfix.1
   google_fonts: ^1.1.0
   flutter_spinkit: ^4.1.2+1
-  advance_pdf_viewer: any
+  advance_pdf_viewer: ^1.2.2
+  syncfusion_flutter_pdfviewer: any
 
 dev_dependencies:
   flutter_test:
@@ -50,3 +51,4 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/pdf/
